--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-dddWindow.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-dddWindow.fxml
@@ -28,8 +28,8 @@
                         <ImageView fitHeight="33.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" />
                      </graphic>
                   </Button>
-                  <Button fx:id="stfButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Save" textAlignment="RIGHT" />
-                  <Button fx:id="rffButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Load" textAlignment="RIGHT" />
+                  <Button fx:id="stfButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#onSTFButtonClicked" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Save" textAlignment="RIGHT" />
+                  <Button fx:id="rffButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#onRFFButtonClicked" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Load" textAlignment="RIGHT" />
                </children>
             </VBox>
             <Button mnemonicParsing="false" onAction="#loadMainScreen" prefHeight="66.0" prefWidth="105.0 " style="-fx-background-color: #1f2a44;">
@@ -39,8 +39,7 @@
                         <Image url="@../images/logo.png" />
                      </image>
                   </ImageView>
-               </graphic>
-            </Button>
+               </graphic></Button>
          </children>
       </AnchorPane>
       <TextField fx:id="nameInputofDriver" layoutX="217.0" layoutY="253.0" prefHeight="25.0" prefWidth="273.0" />
@@ -69,13 +68,12 @@
          </font>
       </Label>
       <Label layoutX="217.0" layoutY="223.0" prefHeight="20.0" prefWidth="311.0" text="Please enter the name of the driver to be deleted." textFill="WHITE" />
-      <Button layoutX="528.0" layoutY="253.0" mnemonicParsing="false" onAction="#findDriverToBeDeleted" prefHeight="25.0" prefWidth="56.0" style="-fx-background-color: #02f3e9; -fx-text-fill: #1f2a44;" text="Find" />
+      <Button layoutX="495.0" layoutY="253.0" mnemonicParsing="false" onAction="#findDriverToBeDeleted" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #02f3e9; -fx-text-fill: #1f2a44;" text="Find" />
       <Label fx:id="successLabel" alignment="CENTER" layoutX="244.0" layoutY="1.0" opacity="0.0" prefHeight="36.0" prefWidth="735.0" style="-fx-background-color: #ABEBC6; -fx-text-fill: #2F824C;">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Button layoutX="490.0" layoutY="253.0" mnemonicParsing="false" onAction="#refershDriverNames" prefHeight="20.0" prefWidth="29.0" text="Find" />
       
       <AnchorPane fx:id="deletePane" layoutX="217.0" layoutY="340.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.0" prefHeight="284.0" prefWidth="355.0" style="-fx-background-color: #333;">
          <children>
