--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-uddWindow.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/Rx-application-uddWindow.fxml
@@ -25,8 +25,8 @@
                             <ImageView fitHeight="33.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" />
                         </graphic>
                     </Button>
-                    <Button fx:id="stfButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Save" textAlignment="RIGHT" />
-                    <Button fx:id="rffButton" alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Load" textAlignment="RIGHT" />
+                    <Button fx:id="stfButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#onSTFButtonClicked" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Save" textAlignment="RIGHT" />
+                    <Button fx:id="rffButton" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#onRFFButtonClicked" prefHeight="58.0" prefWidth="150.0" styleClass="navBarButton" text="Load" textAlignment="RIGHT" />
                 </children>
             </VBox>
             <Button mnemonicParsing="false" onAction="#loadMainScreen" prefHeight="66.0" prefWidth="105.0 " style="-fx-background-color: #1f2a44;">
@@ -92,12 +92,12 @@
       </font>
    </Label>
    <Label layoutX="207.0" layoutY="213.0" prefHeight="20.0" prefWidth="311.0" text="Please enter the name of the driver to be updated." />
-   <Button layoutX="508.0" layoutY="243.0" mnemonicParsing="false" onAction="#findDriverToBeUpdated" prefHeight="25.0" prefWidth="46.0" style="-fx-background-color: #1f2a44; -fx-text-fill: ffffff;" text="Find" />
+   <Button layoutX="482.0" layoutY="243.0" mnemonicParsing="false" onAction="#findDriverToBeUpdated" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: #1f2a44; -fx-text-fill: ffffff;" text="Find" />
    <Label fx:id="successLabel" alignment="CENTER" layoutX="248.0" layoutY="7.0" opacity="0.0" prefHeight="36.0" prefWidth="735.0" style="-fx-background-color: #ABEBC6; -fx-text-fill: #2F824C;">
       <font>
          <Font size="16.0" />
       </font>
    </Label>
-   <Button layoutX="480.0" layoutY="243.0" mnemonicParsing="false" onAction="#refershDriverNames" prefHeight="20.0" prefWidth="29.0" text="Find" />
+
 
 </AnchorPane>
