--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/signIn-view.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/signIn-view.fxml
@@ -4,22 +4,39 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rxapplication.Controller">
    <children>
-      <Label layoutX="64.0" layoutY="71.0" prefHeight="58.0" prefWidth="427.0" text="SIGN IN">
+      <ImageView fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/backgroundSignIn.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="64.0" layoutY="110.0" prefHeight="58.0" prefWidth="427.0" text="SIGN IN" textFill="WHITE">
          <font>
-            <Font size="46.0" />
+            <Font name="System Bold" size="46.0" />
          </font>
       </Label>
-      <TextField fx:id="emailInput" layoutX="64.0" layoutY="231.0" prefHeight="26.0" prefWidth="456.0" />
-      <PasswordField fx:id="passwordInput" layoutX="64.0" layoutY="340.0" prefHeight="26.0" prefWidth="456.0" />
-      <Label layoutX="65.0" layoutY="204.0" prefHeight="17.0" prefWidth="50.0" text="email" />
-      <Label layoutX="66.0" layoutY="314.0" text="Password" />
-      <Button fx:id="continueToApp" layoutX="81.0" layoutY="582.0" mnemonicParsing="false" onAction="#loadMainScreen" opacity="0.0" prefHeight="41.0" prefWidth="456.0" text="Continue" />
-      <Button fx:id="signInButton" layoutX="81.0" layoutY="533.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="41.0" prefWidth="456.0" text="LOG IN" />
+      <TextField fx:id="emailInput" layoutX="66.0" layoutY="277.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Email" style="-fx-background-color: #707070; -fx-border-radius: 20;" />
+      <PasswordField fx:id="passwordInput" layoutX="66.0" layoutY="386.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Password" style="-fx-background-color: #707070; -fx-border-radius: 20px;" />
+      <Label layoutX="68.0" layoutY="254.0" prefHeight="17.0" prefWidth="50.0" text="Email" textFill="#bfbfbf" />
+      <Button fx:id="continueToApp" layoutX="100.0" layoutY="591.0" mnemonicParsing="false" onAction="#loadMainScreen" opacity="0.0" prefHeight="41.0" prefWidth="293.0" text="Continue" />
+      <Button fx:id="signInButton" layoutX="100.0" layoutY="532.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="41.0" prefWidth="293.0" text="LOG IN" />
+      <Label layoutX="13.0" layoutY="106.0" opacity="0.0" prefHeight="36.0" prefWidth="87.0" text="WELCOME," textFill="#e8e8e8" />
+      <Label fx:id="adminFname" layoutX="13.0" layoutY="126.0" opacity="0.0" prefHeight="36.0" prefWidth="87.0" textFill="#e8e8e8">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="adminLname" layoutX="13.0" layoutY="144.0" opacity="0.0" prefHeight="36.0" prefWidth="87.0" textFill="WHITE">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="68.0" layoutY="361.0" prefHeight="17.0" prefWidth="50.0" text="Password" textFill="#bfbfbf" />
    </children>
 </AnchorPane>
