--- a/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/signIn-view.fxml
+++ b/RXapplicationGUI-master/src/main/resources/com/example/rxapplication/signIn-view.fxml
@@ -16,27 +16,19 @@
             <Image url="@../images/backgroundSignIn.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="64.0" layoutY="110.0" prefHeight="58.0" prefWidth="427.0" text="SIGN IN" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="46.0" />
-         </font>
-      </Label>
-      <TextField fx:id="emailInput" layoutX="66.0" layoutY="277.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Email" style="-fx-background-color: #707070; -fx-border-radius: 20;" />
-      <PasswordField fx:id="passwordInput" layoutX="66.0" layoutY="386.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Password" style="-fx-background-color: #707070; -fx-border-radius: 20px;" />
+      <TextField fx:id="emailInput" layoutX="66.0" layoutY="277.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Email" style="-fx-background-color: #707070; -fx-border-radius: 20;  -fx-text-inner-color: #dedcdc;" />
+      <PasswordField fx:id="passwordInput" layoutX="66.0" layoutY="386.0" prefHeight="41.0" prefWidth="361.0" promptText="Enter Password" style="-fx-background-color: #707070; -fx-border-radius: 20px;-fx-text-inner-color: #dedcdc;" />
       <Label layoutX="68.0" layoutY="254.0" prefHeight="17.0" prefWidth="50.0" text="Email" textFill="#bfbfbf" />
-      <Button fx:id="continueToApp" layoutX="100.0" layoutY="591.0" mnemonicParsing="false" onAction="#loadMainScreen" opacity="0.0" prefHeight="41.0" prefWidth="293.0" text="Continue" />
-      <Button fx:id="signInButton" layoutX="100.0" layoutY="532.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="41.0" prefWidth="293.0" text="LOG IN" />
-      <Label layoutX="13.0" layoutY="106.0" opacity="0.0" prefHeight="36.0" prefWidth="87.0" text="WELCOME," textFill="#e8e8e8" />
-      <Label fx:id="adminFname" layoutX="13.0" layoutY="126.0" opacity="0.0" prefHeight="36.0" prefWidth="87.0" textFill="#e8e8e8">
+      <Button fx:id="continueToApp" layoutX="100.0" layoutY="589.0" mnemonicParsing="false" onAction="#loadMainScreen" opacity="0.0" prefHeight="41.0" prefWidth="293.0" style="-fx-background-color: #02f3e9;" text="NEXT" textFill="#1f2a44">
          <font>
-            <Font size="13.0" />
-         </font>
-      </Label>
-      <Label fx:id="adminLname" layoutX="13.0" layoutY="144.0" opacity="0.0" prefHeight="36.0" prefWidth="87.0" textFill="WHITE">
+            <Font size="17.0" />
+         </font></Button>
+      <Button fx:id="signInButton" layoutX="100.0" layoutY="535.0" mnemonicParsing="false" onAction="#validateFields" prefHeight="41.0" prefWidth="293.0" text="LOG IN">
          <font>
-            <Font size="13.0" />
-         </font>
-      </Label>
+            <Font size="17.0" />
+         </font></Button>
       <Label layoutX="68.0" layoutY="361.0" prefHeight="17.0" prefWidth="50.0" text="Password" textFill="#bfbfbf" />
+      <Label fx:id="emailInputMessage" layoutX="68.0" layoutY="323.0" prefHeight="17.0" prefWidth="194.0" textFill="#ff6969" />
+      <Label fx:id="passwordInputMessage" layoutX="68.0" layoutY="433.0" prefHeight="17.0" prefWidth="194.0" textFill="#ff6969" />
    </children>
 </AnchorPane>
